--- a/user.service
+++ b/user.service
@@ -4,7 +4,7 @@ Description = User Service
 User=roboshop
 Environment=MONGO=true
 Environment=REDIS_HOST=redis.joindevops.fun
-Environment=MONGO_URL="mongodb://mongodb.joindevops.online:27017/users"
+Environment=MONGO_URL="mongodb://mongodb.joindevops.fun:27017/users"
 ExecStart=/bin/node /app/server.js
 SyslogIdentifier=user
 
